<resources>
    <string name="app_name">Mari Liburan.com</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tourtrip">Tour Trip</string>
    <string name="title_akomodasi">Akomodasi</string>
    <string name="title_transport">Transportasi</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="Notif">Mari liburan temukan sensai baru!</string>
    <string name="Notif2">Dimana saja dan kapan saja!</string>
    <string name="roomName1">Melati Room</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transportasiToolBar">Transportasi</string>
</resources>
